--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
        
         <div class="songList">
-            <h2>Best of the SRK </h2>
+            <h2>Best of SRK </h2>
             <div class="songItemContainer">
                 <div class="songItem">
                     <img src="img/Bole chudiyan.jfif" alt="Bole chudiyan" >
