--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Spotify
             </li>
             <li>Home</li>
-            <li>About Us</li>
+            <li>About </li>
         </ul>
     </nav>
     <div class="container">
