--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <span class="songListPlay">
                         <span class="timestamp">
                             05.34
-                            <i class="fa-solid songItemPlay fa-circle-play"></i>
+                            <i id="0"class="fa-solid songItemPlay fa-circle-play"></i>
                         </span>
                     </span>
                 </div>
@@ -39,7 +39,7 @@
                     <span class="songListPlay">
                         <span class="timestamp">
                             05.34
-                            <i class="fa-solid songItemPlay fa-circle-play"></i>
+                            <i id="1" class="fa-solid songItemPlay fa-circle-play"></i>
                         </span>
                     </span>
                 </div>
@@ -49,7 +49,7 @@
                     <span class="songListPlay">
                         <span class="timestamp">
                             05.34
-                            <i class="fa-solid songItemPlay fa-circle-play"></i>
+                            <i id="2" class="fa-solid songItemPlay fa-circle-play"></i>
                         </span>
                     </span>
                 </div>
@@ -59,7 +59,7 @@
                     <span class="songListPlay">
                         <span class="timestamp">
                             05.34
-                            <i class="fa-solid songItemPlay fa-circle-play"></i>
+                            <i id="3" class="fa-solid songItemPlay fa-circle-play"></i>
                         </span>
                     </span>
                 </div>
@@ -69,7 +69,7 @@
                     <span class="songListPlay">
                         <span class="timestamp">
                             05.34
-                            <i class="fa-solid songItemPlay fa-circle-play"></i>
+                            <i id="4" class="fa-solid songItemPlay fa-circle-play"></i>
                         </span>
                     </span>
                 </div>
@@ -79,7 +79,7 @@
                     <span class="songListPlay">
                         <span class="timestamp">
                             05.34
-                            <i class="fa-solid songItemPlay fa-circle-play"></i>
+                            <i id="5" class="fa-solid songItemPlay fa-circle-play"></i>
                         </span>
                     </span>
                 </div>
@@ -92,16 +92,14 @@
         <input type="range" name="range" id="myProgressBar"  value="0" min="0" max="100">
         <div class="icons" > 
             <!--fontawesome icons-->    
-            <i class="fa-solid  fa-backward fa-2x"></i>
+            <i class="fa-solid  fa-backward fa-2x" id="previous"></i>
             <i class="fa-solid  fa-circle-play fa-2x" id="masterPlay"></i>
-            <i class="fa-solid  fa-forward fa-2x"></i>
+            <i class="fa-solid  fa-forward fa-2x" id="next"></i>
             
         </div>
         <div class="songInfo">
             <img src="img/playing.gif" width="130px" alt="" id="gif">
-            <span>
-                Bole chudiyan
-            </span>
+            <span id="masterSongName">Bole chudiyan</span>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/844d1abd4b.js" crossorigin="anonymous"></script>
