--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="img/logo.png" alt="Spotify" >
                 Spotify
             </li>
-            <li>Home</li>
+            <li>mayur's Home</li>
             <li>About </li>
         </ul>
     </nav>
